# vformat

vformat/src/vformat/: Makefile.am  Makefile.in  vf_iface.h  vf_win32libs.h
vformat/src/vformat/src/: Makefile.am  Makefile.in  vf_access.c  vf_access_calendar.c  vf_access_wrappers.c  vf_clone_object.c  vf_config.h  vf_create_object.c  vf_delete.c  vf_internals.h  vf_malloc.c  vf_malloc.h  vf_malloc_stdlib.c  vf_malloc_stdlib.h  vf_modified.c  vf_modified.h  vf_parser.c  vf_reader.c  vf_search.c  vf_string_arrays.c  vf_string_arrays.h  vf_strings.c  vf_strings.h  vf_write_callback.c  vf_write_file.c  vf_writer.c
