lib_LTLIBRARIES = libvformat.la

libvformat_la_SOURCES = vf_access.c  vf_malloc.c  vf_strings.c vf_access_wrappers.c	\
		vf_parser.c vf_writer.c vf_create_object.c				\
		vf_access_calendar.c vf_reader.c vf_delete.c				\
		vf_search.c vf_malloc_stdlib.c vf_modified.c vf_string_arrays.c 

EXTRA_DIST = *.h 

libvformat_la_LDFLAGS = -version-info 0

